working on grouping the product on the basis of price

--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -19,6 +19,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "plt.style.use('fivethirtyeight')\n",
     "\n",
     "# For cleaning the text\n",
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5068cedf",
+   "id": "f78a5183",
    "metadata": {},
    "source": [
     "# Clean the preference"
@@ -184,8 +185,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.83 s, sys: 1.33 s, total: 9.17 s\n",
-      "Wall time: 9.17 s\n"
+      "CPU times: user 8.2 s, sys: 1.41 s, total: 9.61 s\n",
+      "Wall time: 9.62 s\n"
      ]
     }
    ],
@@ -403,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8b5b350b",
+   "id": "49d21a20",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84177074",
+   "id": "8b2a1a36",
    "metadata": {},
    "source": [
     "### Increase the model performance:\n",
@@ -480,7 +481,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 29.1 s, sys: 1.55 s, total: 30.7 s\n",
+      "CPU times: user 29.5 s, sys: 1.72 s, total: 31.3 s\n",
       "Wall time: 27.4 s\n"
      ]
     }
@@ -623,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "95401d4e",
+   "id": "76930350",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +922,7 @@
     "def recommender(product):\n",
     "    product_index = df_recommend[df_recommend['ProductName'] == product].index[0]\n",
     "    similarity_percentage = similarity[product_index]\n",
-    "    recommended_product = sorted(list(enumerate(similarity_percentage)), reverse=True, key=lambda x:x[1])[1:6]\n",
+    "    recommended_product = sorted(list(enumerate(similarity_percentage)), reverse=True, key=lambda x:x[1])[1:4]\n",
     "    \n",
     "    products = []\n",
     "    for index in recommended_product:\n",
@@ -941,9 +942,7 @@
       "text/plain": [
        "['Vanilla Bean Shortbread Cookies',\n",
        " 'The Luxe Collection Cocoa Shortbread',\n",
-       " 'Chocolate Cacao Nib Shortbread',\n",
-       " 'Original Speculoos Cookies- 4.8oz',\n",
-       " 'The Luxe Collection Almond Butter Cookies']"
+       " 'Chocolate Cacao Nib Shortbread']"
       ]
      },
      "execution_count": 24,
@@ -968,8 +967,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d2740733",
+   "metadata": {},
+   "source": [
+    "### Gift boxes with 20 percent profit atleast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0438e20b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "a07723ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def product_category(preds):\n",
+    "    # fecthing all the products which has category as product\n",
+    "    df_product = pd.DataFrame(columns=['ProductId', 'ProductName', 'ProductTag', 'Rating', 'Cost', 'Price'])\n",
+    "    df_product_dic = {}\n",
+    "    for pred in preds:\n",
+    "        # adding pred as key in dic\n",
+    "        df_product_dic[pred]= []\n",
+    "        \n",
+    "        # fetching products on the basis of category\n",
+    "        df_temp = df_recommend[df_recommend['ProductTag'].apply(lambda product_tag: pred in product_tag.lower())]\n",
+    "        # filtering products with more than 4 category\n",
+    "        df_temp = df_temp[df_temp['Rating'] > 4]\n",
+    "        # sorting products on the basis of price\n",
+    "        df_temp = df_temp.sort_values(by=['Price'], ascending=False)\n",
+    "        # top price product\n",
+    "        top_price_product = df_temp.iloc[0]['ProductName']\n",
+    "        \n",
+    "        # assinging top price product item into df_product dataframe\n",
+    "        df_product.loc[len(df_product.index)] = df_temp.iloc[0]\n",
+    "        # fetching product id, cost and price of the top price product\n",
+    "        dic_value = list(df_temp.iloc[0][['ProductId', 'Cost', 'Price']].values)\n",
+    "        # storing dic_value into the df_product_dic\n",
+    "        df_product_dic[pred].append(dic_value)\n",
+    "        \n",
+    "        # recommend products on the bsis of top price product\n",
+    "        product_recommendations = recommender(top_price_product)\n",
+    "        for product in product_recommendations:\n",
+    "            # fetching product with product name\n",
+    "            df_temp = df_recommend[df_recommend['ProductName'] == product]\n",
+    "            # filtering if product has more than 4 category\n",
+    "            df_temp = df_temp[df_temp['Rating'] > 4]\n",
+    "            \n",
+    "            # checking after filtering df_temp has any record or not\n",
+    "            if df_temp.shape[0] != 0:\n",
+    "                # assinging top price product item into df_product dataframe\n",
+    "                df_product.loc[len(df_product.index)] = df_temp.iloc[0]\n",
+    "                # fetching product id, cost and price of the top price product\n",
+    "                dic_value = list(df_temp.iloc[0][['ProductId', 'Cost', 'Price']].values)\n",
+    "                # storing dic_value into the df_product_dic\n",
+    "                df_product_dic[pred].append(dic_value)\n",
+    "\n",
+    "    return df_product_dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "c6caad72",
    "metadata": {},
    "outputs": [],
@@ -986,7 +1052,6 @@
     "    \n",
     "    # predict the category\n",
     "    pred = svc.predict(df_vec)[0]\n",
-    "    print(\"Predicted Tag:\", pred)\n",
     "    \n",
     "    # predict probability\n",
     "    pred_prob = svc.predict_proba(df_vec)[0]\n",
@@ -998,22 +1063,12 @@
     "    \n",
     "    # sort the dictionary to get the max two\n",
     "    category_prob_sort = dict(sorted(category_prob.items(), key=lambda item: item[1], reverse=True))\n",
-    "    pred_two = list(category_prob_sort.keys())[:2]\n",
-    "    print(\"\\nProduct tag sorted:\", category_prob_sort)\n",
+    "    preds = list(category_prob_sort.keys())[:3]\n",
     "    \n",
-    "    # fecthing all the products which has category as product\n",
-    "    df_product = df_recommend[df_recommend['ProductTag'].apply(lambda product_tag: pred in product_tag.lower())]\n",
-    "    df_product = df_product[['ProductId', 'ProductName', 'Cost', 'Price']]\n",
+    "    # fetching products on the basis of category\n",
+    "    df_products = product_category(preds)\n",
     "    \n",
-    "    product_name = df_product.iloc[0]['ProductName']\n",
-    "    print(\"\\nProduct Name:\", product_name)\n",
-    "    \n",
-    "    # recommend product similar to product name\n",
-    "    print(\"\\nRecommended products:\")\n",
-    "    print(\"--------------------------\")\n",
-    "    recommends = recommender(product_name)\n",
-    "    for recommend in recommends:\n",
-    "        print(recommend)"
+    "    return df_products"
    ]
   },
   {
@@ -1026,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "a203652f",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1168,7 @@
        "4  I’m more of a tea person 🍵$$$Any specialty tea...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "207cd5f1",
    "metadata": {},
    "outputs": [
@@ -1193,7 +1248,7 @@
        "4          50  I’m more of a tea person 🍵$$$Any specialty tea..."
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,50 +1260,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "49756fa1",
+   "execution_count": 29,
+   "id": "e977f1b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'I’m more of a tea person 🍵$$$Any specialty tea is good for me 🍵$$$ Savories and non-sweet snacks 🥓 🥕🥨 $$$  I do NOT have any allergies or dietary restrictions 👍 $$$ $$$Send 👍$$$I like everything 👍$$$ 📸 I enjoy capturing pictures &amp; videos $$$  📱🏡 Smart home gadgets are so cool. I love them. $$$ $$$Send 👍$$$Oh yeah! 🤘$$$L'"
+       "\"I'm a coffee person ☕️$$$I love to make pour over/specialty coffees from coffee beans 🙋\\u200d♀️☕️$$$ Healthy Sweet Treats 🍯 $$$  I do NOT have any allergies or dietary restrictions 👍 $$$ $$$Send 👍$$$Hard liquor (for example -- Whiskey, Bourbon, Rum, Tequila) 🥃$$$ 📱🏡 Smart home gadgets are so cool. I love them. $$$  🧘\\u200d♀️🕯💆\\u200d♀️🤸\\u200d♂️I’m into health, wellness &amp; body care $$$ $$$Send 👍$$$ I love being outdoors 🚶\\u200d♀️ $$$ $$$Send 👍\""
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_str = df_test_sample['Preferences'][8]\n",
+    "test_str = df_test_sample['Preferences'][3]\n",
     "test_str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "87f3966d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted Tag: tea\n",
-      "\n",
-      "Product tag sorted: {'tea': 0.42588783848708667, 'savoury': 0.14781177711792987, 'accessory': 0.08773956920488564, 'liquoraccessory': 0.08110777524534013, 'wine': 0.06499813220763796, 'photography': 0.05600967984492609, 'smart product': 0.045774758252465984, 'hard liquor': 0.023083567905095602, 'healthy treat': 0.022868299230430586, 'gadget': 0.016187766436995345, 'sweet': 0.011565775136013548, 'health and fitness': 0.010523704133353599, 'artisanal': 0.003119779946532976, 'coffee': 0.0019081163833161126, 'ground': 0.0014134604679896254}\n",
-      "\n",
-      "Product Name: Everyday English Breakfast Tea Pyramid Bags (TIN)\n",
-      "\n",
-      "Recommended products:\n",
-      "--------------------------\n",
-      "Relax Tea Pyramid Bags (TIN)\n",
-      "Sleep Tea Pyramid Bags (TIN)\n",
-      "Immunity Tea Pyramid Bags (TIN)\n",
-      "English Breakfast - 20 Teabags in Signature Tea Tin\n",
-      "Mini Signature Box (Five Pyramid Bags)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'coffee': [[3770, 19.6, 39.0], [3848, 18.9, 37.0], [1308, 7.63, 20.75]],\n",
+       " 'artisanal': [[2132, 12.0, 22.0],\n",
+       "  [2825, 5.62, 15.95],\n",
+       "  [2426, 8.5, 22.0],\n",
+       "  [1220, 7.63, 20.75]],\n",
+       " 'healthy treat': [[2345, 11.62, 19.0],\n",
+       "  [2080, 5.75, 15.5],\n",
+       "  [3641, 7.65, 18.0]]}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
