filtering product that has more than 10 percent predictiing probability and collections them into list

--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f78a5183",
+   "id": "0d261180",
    "metadata": {},
    "source": [
     "# Clean the preference"
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "49d21a20",
+   "id": "c694eb45",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b2a1a36",
+   "id": "2bbe714b",
    "metadata": {},
    "source": [
     "### Increase the model performance:\n",
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "76930350",
+   "id": "d249490f",
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2740733",
+   "id": "9ee79768",
    "metadata": {},
    "source": [
     "### Gift boxes with 20 percent profit atleast"
@@ -977,15 +977,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0438e20b",
+   "id": "ec810823",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def gift_boxes(products, order_price):\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a07723ea",
+   "id": "9452c44c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1035,12 +1038,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "id": "c6caad72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pipeline(pref):\n",
+    "def pipeline(pref, order_price):\n",
     "    # creating a dataframe\n",
     "    df = pd.DataFrame({\"Preference\": [pref]})\n",
     "    \n",
@@ -1063,7 +1066,14 @@
     "    \n",
     "    # sort the dictionary to get the max two\n",
     "    category_prob_sort = dict(sorted(category_prob.items(), key=lambda item: item[1], reverse=True))\n",
-    "    preds = list(category_prob_sort.keys())[:3]\n",
+    "    \n",
+    "    # taking the categories which has a predicted percentage of more than or equal to 10 percent\n",
+    "    preds = []\n",
+    "    for category in category_prob_sort.keys():\n",
+    "        if category_prob_sort[category] >= 0.1:\n",
+    "            preds.append(category)\n",
+    "        if len(preds) > 2:\n",
+    "            break\n",
     "    \n",
     "    # fetching products on the basis of category\n",
     "    df_products = product_category(preds)\n",
@@ -1260,52 +1270,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e977f1b3",
+   "execution_count": 59,
+   "id": "cd3e7bc9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"I'm a coffee person ☕️$$$I love to make pour over/specialty coffees from coffee beans 🙋\\u200d♀️☕️$$$ Healthy Sweet Treats 🍯 $$$  I do NOT have any allergies or dietary restrictions 👍 $$$ $$$Send 👍$$$Hard liquor (for example -- Whiskey, Bourbon, Rum, Tequila) 🥃$$$ 📱🏡 Smart home gadgets are so cool. I love them. $$$  🧘\\u200d♀️🕯💆\\u200d♀️🤸\\u200d♂️I’m into health, wellness &amp; body care $$$ $$$Send 👍$$$ I love being outdoors 🚶\\u200d♀️ $$$ $$$Send 👍\""
+       "{'sweet': [[424, 21.0, 35.0], [3677, 3.25, 9.5], [2999, 13.0, 30.0]],\n",
+       " 'smart product': [[1189, 139.99, 192.99], [1205, 37.0, 102.0]]}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_str = df_test_sample['Preferences'][3]\n",
-    "test_str"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "87f3966d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'coffee': [[3770, 19.6, 39.0], [3848, 18.9, 37.0], [1308, 7.63, 20.75]],\n",
-       " 'artisanal': [[2132, 12.0, 22.0],\n",
-       "  [2825, 5.62, 15.95],\n",
-       "  [2426, 8.5, 22.0],\n",
-       "  [1220, 7.63, 20.75]],\n",
-       " 'healthy treat': [[2345, 11.62, 19.0],\n",
-       "  [2080, 5.75, 15.5],\n",
-       "  [3641, 7.65, 18.0]]}"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pipeline(test_str)"
+    "index = 156\n",
+    "\n",
+    "test_str = df_test_sample['Preferences'][index]\n",
+    "order_price = df_test_sample['OrderPrice'][index]\n",
+    "pipeline(test_str, order_price)"
    ]
   }
  ],
