recommendation system ready and improvements left to do

--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41e3159d",
+   "id": "98e8adfa",
    "metadata": {},
    "source": [
     "# Clean the preference"
@@ -192,8 +192,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.34 s, sys: 865 ms, total: 6.2 s\n",
-      "Wall time: 6.2 s\n"
+      "CPU times: user 5.42 s, sys: 925 ms, total: 6.35 s\n",
+      "Wall time: 6.37 s\n"
      ]
     }
    ],
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6d6f04b3",
+   "id": "e6af3acd",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb18d953",
+   "id": "559d79c5",
    "metadata": {},
    "source": [
     "### Increase the model performance:\n",
@@ -497,8 +497,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.1 s, sys: 1.4 s, total: 18.5 s\n",
-      "Wall time: 15.4 s\n"
+      "CPU times: user 17.2 s, sys: 1.25 s, total: 18.4 s\n",
+      "Wall time: 16.1 s\n"
      ]
     }
    ],
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7e3d2686",
+   "id": "838915c9",
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
     "def recommender(product):\n",
     "    product_index = df_recommend[df_recommend['ProductName'] == product].index[0]\n",
     "    similarity_percentage = similarity[product_index]\n",
-    "    recommended_product = sorted(list(enumerate(similarity_percentage)), reverse=True, key=lambda x:x[1])[1:4]\n",
+    "    recommended_product = sorted(list(enumerate(similarity_percentage)), reverse=True, key=lambda x:x[1])[1:6]\n",
     "    \n",
     "    products = []\n",
     "    for index in recommended_product:\n",
@@ -958,7 +958,9 @@
       "text/plain": [
        "['Vanilla Bean Shortbread Cookies',\n",
        " 'The Luxe Collection Cocoa Shortbread',\n",
-       " 'Chocolate Cacao Nib Shortbread']"
+       " 'Chocolate Cacao Nib Shortbread',\n",
+       " 'Original Speculoos Cookies- 4.8oz',\n",
+       " 'The Luxe Collection Almond Butter Cookies']"
       ]
      },
      "execution_count": 24,
@@ -984,36 +986,88 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dff63c9",
+   "id": "52903786",
    "metadata": {},
    "source": [
     "### Gift boxes with 20 percent profit atleast\n",
-    "\n",
-    "Total_average_cost = (Total_cost + Ship + 0.3) * (100 / (100 - 2.9 - Margin_Percentage * 100))\n",
-    "\n",
     "**NOTE: Margin should be atleast 20 percent** "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "bd5c0a53",
+   "execution_count": 25,
+   "id": "eb874351",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gift_boxes(product_price, order_price):\n",
-    "    print(\"Order Price:\", order_price)\n",
-    "    shipping_fee = 9.5\n",
+    "def margin_percentage(price, cost):\n",
+    "    total_amount_charged = price\n",
+    "    total_cost = cost\n",
+    "    shipping_fees = 9.5\n",
+    "    strip_fee = ((total_amount_charged * 2.9) / 100) + 0.3\n",
     "    \n",
-    "    product_list = [product_price[category] for category in product_price]\n",
-    "    print(len(product_list))\n",
-    "        "
+    "    margin = total_amount_charged - total_cost - shipping_fees - strip_fee\n",
+    "    margin_percentage = ((margin * 100) / total_amount_charged)\n",
+    "\n",
+    "    return margin_percentage"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "14669868",
+   "id": "7dc78d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def product_group(product_price, order_price):\n",
+    "    # converting dictionary into 2D array\n",
+    "    product_list = [product_price[category] for category in product_price]\n",
+    "    \n",
+    "    # finding the max number of products in any sub array\n",
+    "    max_groups = 0\n",
+    "    for product in product_list:\n",
+    "        if max_groups < len(product):\n",
+    "            max_groups = len(product)\n",
+    "    \n",
+    "    # creating groups of products \n",
+    "    groups = []\n",
+    "    for i in range(max_groups):\n",
+    "        temp_group = []\n",
+    "        for j in range(len(product_list)):\n",
+    "            if len(product_list[j]) > i:\n",
+    "                temp_group.append(product_list[j][i])\n",
+    "            else:\n",
+    "                temp_group.append(product_list[j][len(product_list[j])-1])\n",
+    "        groups.append(temp_group)\n",
+    "    \n",
+    "    # creating box of products maintaining 20 percent margin\n",
+    "    boxes = []\n",
+    "    for group in groups:\n",
+    "        ids = ''\n",
+    "        cost = 0.0\n",
+    "        price = 0.0\n",
+    "        margin_satisfy = False\n",
+    "        \n",
+    "        for product in group:\n",
+    "            ids += str(product[0]) + ','\n",
+    "            cost += product[1]\n",
+    "            price += product[2]\n",
+    "            if margin_percentage(price, cost) >= 20:\n",
+    "                margin_satisfy = True\n",
+    "                break\n",
+    "\n",
+    "        if margin_satisfy:\n",
+    "            ids = ids[:len(ids) - 1]\n",
+    "            box = [ids, price]\n",
+    "            boxes.append(box)\n",
+    "    \n",
+    "    return boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b1dfa403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,11 +1092,12 @@
     "        df_product.loc[len(df_product.index)] = df_temp.iloc[0]\n",
     "        # fetching product id, cost and price of the top price product\n",
     "        dic_value = list(df_temp.iloc[0][['ProductId', 'Cost', 'Price']].values)\n",
-    "        # storing dic_value into the df_product_dic\n",
+    "        # storing dic_value into the product_dic\n",
     "        product_dic[pred].append(dic_value)\n",
     "        \n",
     "        # recommend products on the bsis of top price product\n",
     "        product_recommendations = recommender(top_price_product)\n",
+    "        \n",
     "        for product in product_recommendations:\n",
     "            # fetching product with product name\n",
     "            df_temp = df_recommend[df_recommend['ProductName'] == product]\n",
@@ -1051,11 +1106,11 @@
     "            \n",
     "            # checking after filtering df_temp has any record or not\n",
     "            if df_temp.shape[0] != 0:\n",
-    "                # assinging top price product item into df_product dataframe\n",
+    "                # assinging item into df_product dataframe\n",
     "                df_product.loc[len(df_product.index)] = df_temp.iloc[0]\n",
-    "                # fetching product id, cost and price of the top price product\n",
+    "                # fetching product id, cost and price\n",
     "                dic_value = list(df_temp.iloc[0][['ProductId', 'Cost', 'Price']].values)\n",
-    "                # storing dic_value into the df_product_dic\n",
+    "                # storing dic_value into the product_dic\n",
     "                product_dic[pred].append(dic_value)\n",
     "\n",
     "    return product_dic"
@@ -1063,12 +1118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "c6caad72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pipeline(pref, order_price):\n",
+    "def gift_boxes(pref, order_price):\n",
     "    # creating a dataframe\n",
     "    df = pd.DataFrame({\"Preference\": [pref]})\n",
     "    \n",
@@ -1097,13 +1152,13 @@
     "    for category in category_prob_sort.keys():\n",
     "        if category_prob_sort[category] >= 0.1:\n",
     "            preds.append(category)\n",
-    "        if len(preds) > 2:\n",
+    "        if len(preds) > 3:\n",
     "            break\n",
     "    \n",
     "    # fetching products on the basis of category\n",
     "    products_price = product_category(preds)\n",
     "    \n",
-    "    return gift_boxes(products_price, order_price)"
+    "    return product_group(products_price, order_price)"
    ]
   },
   {
@@ -1116,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "a203652f",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1258,7 @@
        "4  I’m more of a tea person 🍵$$$Any specialty tea...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "207cd5f1",
    "metadata": {},
    "outputs": [
@@ -1283,7 +1338,7 @@
        "4          50  I’m more of a tea person 🍵$$$Any specialty tea..."
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1295,35 +1350,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "3738b421",
+   "execution_count": 31,
+   "id": "d36f2bb4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Order Price: 30\n",
-      "3\n"
-     ]
+     "data": {
+      "text/plain": [
+       "([['1840', 68.0],\n",
+       "  ['4273,2887', 64.99],\n",
+       "  ['3211', 33.0],\n",
+       "  ['4610,2887', 65.99],\n",
+       "  ['4722,2887', 73.99000000000001]],\n",
+       " 50)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "index = 3\n",
+    "index = 30\n",
     "\n",
     "test_str = df_test_sample['Preferences'][index]\n",
     "order_price = df_test_sample['OrderPrice'][index]\n",
     "\n",
-    "pipeline(test_str, order_price)"
+    "gift_boxes(test_str, order_price), order_price"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "040884e9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
